crates/crane/src/snapshots/crane__compiler__tests__mixed_case_function_name.snap
---
source: crates/crane/src/compiler.rs
expression: "&stderr"
---
Error: A type error occurred.
   ╭─[mixed_case.crane:1:2]
   │
 3 │ fn XMLHttpRequest() {}
   │    ───────┬──────  
   │           ╰──────── Function names must be written in snake_case.
   │           │        
   │           ╰──────── Try writing it as `xml_http_request` instead.
───╯

